# transient

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
derive/: Cargo.toml
derive/src/: checks.rs  lib.rs  options.rs  utils.rs  variance.rs
derive/tests/: 01-no-type-params.rs  02-one-type-param.rs  03-two-type-params.rs  04-missing-lifetime.rs  04-missing-lifetime.stderr  04-no-lifetime.rs  05-extra-lifetime.rs  05-extra-lifetime.stderr  progress.rs  test_derive.rs
derive/tests/expand/: 01-no-attributes.expanded.rs  01-no-attributes.rs  02-covariance.expanded.rs  02-covariance.rs  02-covariant.expanded.rs  02-covariant.rs  03-contravariance.expanded.rs  03-contravariance.rs  04-mixed-variance.expanded.rs  04-mixed-variance.rs  05-alternate-crate.expanded.rs  05-alternate-crate.rs
derive/tests/fail/: 01-extra-lifetime.rs  01-extra-lifetime.stderr  01-too-many-lifetimes.rs  01-too-many-lifetimes.stderr  01-unknown-lifetime.rs  01-unknown-lifetime.stderr  02-covariant-without-unsafe.rs  02-covariant-without-unsafe.stderr  02-invalid-covariant.rs  02-invalid-covariant.stderr  02-unrecognized-lifetime.rs  02-unrecognized-lifetime.stderr  02-unsafe-covariance.rs  02-unsafe-covariance.stderr  03-contra-declared-co.rs  03-contra-declared-co.stderr  03-covariant-static.rs  03-covariant-static.stderr  03-invalid-contravariant.rs  03-invalid-contravariant.stderr  03-unrecognized-variance.rs  03-unrecognized-variance.stderr  04-inv-declared-co.rs  04-inv-declared-co.stderr  04-unrecognized-variance.rs  04-unrecognized-variance.stderr  05-co-declared-contra.rs  05-co-declared-contra.stderr  05-contra-declared-co.stderr  06-inv-declared-contra.rs  06-inv-declared-contra.stderr  07-co-declared-contra.stderr  07-duplicate-variances.rs  07-duplicate-variances.stderr
derive/tests/pass/: 01-no-type-params.rs  02-one-type-param.rs  03-two-type-params.rs  04-no-lifetime.rs  05-contravariant.rs  05-covariant.rs  06-contravariant.rs  07-alternate-crate.rs
src/: any.rs  cell.rs  erased.rs  iter.rs  lib.rs  make_static.rs  storage.rs  tests.rs  transience.rs  transient.rs  variance.rs
tests/: test_compiler_error.rs
tests/fail/: invariance-bad-function.rs  invariance-bad-function.stderr  invariance-bad-usage.rs  invariance-bad-usage.stderr  mixed-contravariance-misuse.rs  mixed-contravariance-misuse.stderr  mixed-covariance-misuse.rs  mixed-covariance-misuse.stderr
tests/pass/: contravariance.rs  covariance.rs  mixed-variance.rs
tests/variance/: covariance.rs  invariance.rs  invariance.stderr  invariance2.rs  invariance2.stderr
