[package]
name = "transient"
version = "0.4.1"
description = "Reimplementation of `std::any::Any` with support for non-`'static` types"
authors = ["Joshua Rudolph <jrrudolph93@gmail.com>"]
readme = "README.md"
keywords = ["any", "static", "downcast", "typeid"]
homepage = "https://github.com/JRRudy1/transient"
repository = "https://github.com/JRRudy1/transient"
documentation = "https://docs.rs/transient"
license = "MIT OR Apache-2.0"
exclude = ["/.gitignore"]
edition = "2021"
rust-version = "1.60"

[lib]
doctest = true

[workspace]
members = ["derive"]

[dependencies]
rustversion = "1.0"

transient-derive = { path = "derive", version = "0.4.1", optional = true }
ndarray = { version = "0.15", optional = true }
numpy = { version = "0.21", optional = true }
pyo3 = { version = ">=0.21", optional = true }
uuid = { version = "1", optional = true }
either = { version = ">=1", default-features = false, optional = true }
serde_json = { version = ">=1", default-features = false, optional = true, features = ["std"] }
rmp-serde = { version = ">=1", default-features = false, optional = true }

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[features]
default = ["std", "derive"]

# Provide impls for common standard library types like Vec<T> and HashMap<K, V>.
# Requires a dependency on the Rust standard library.
std = ["alloc"]

# Provide impls for types in the Rust core allocation and collections library
# including String, Box<T>, Vec<T>, and Cow<T>. This is a subset of std but may
# be enabled without depending on all of std.
alloc = []

# Provides a `derive` macro for implementing the `Transient` trait
derive = ["std", "transient-derive"]

# Provides `Transient` implementations for `ndarray` types
ndarray = ["dep:ndarray"]

# Provides `Transient` implementations for `pyo3` types
pyo3 = ["dep:pyo3"]

# Provides `Transient` implementations for `numpy` types
numpy = ["dep:numpy", "pyo3"]

# Provides `Transient` implementations for `uuid` types
uuid = ["dep:uuid"]

# Provides `Transient` implementations for `either` types
either = ["dep:either"]

# Provides `Transient` implementations for `serde_json` types
serde_json = ["dep:serde_json"]

# Provides `Transient` implementations for `rmp_serde` types
rmp-serde = ["dep:rmp-serde"]

[workspace.lints.clippy]
let_unit_value = "warn"
manual_assert = "warn"
unnecessary_wraps = "warn"

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
invalid_doc_attributes = "warn"
unused_lifetimes = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
bare_urls = "warn"
