[package]
name = "transient_derive"
version = "0.0.1"
edition = "2021"
autotests = false

[lib]
proc-macro = true
doctest = true

[[test]]
name = "tests"
path = "tests/test_derive.rs"

[dependencies]
proc-macro2 = "1.*"
quote = "1.*"
syn = { version = "2.*", features = ["full"] }
thiserror = "1.*"

[dev-dependencies]
trybuild = { version = "1.0.96", features = ["diff"] }
macrotest = "1.0.12"
transient = { path = ".." }
